--- a/force-app/main/default/classes/SampleDataFactoryTest.cls
+++ b/force-app/main/default/classes/SampleDataFactoryTest.cls
@@ -3,6 +3,7 @@ public class SampleDataFactoryTest {
     @isTest
     static void testDataInsert() {
         Test.startTest();
+        Test.setMock(HttpCalloutMock.class, new SampleDataHttpResponseGenerator());
         SampleDataFactory.createAndInsertSampleRecords();
         Test.stopTest();
     }
